# xPyD

./: README.md  pyproject.toml
xpyd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
