[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xpyd"
version = "1.2.0"
description = "xPyD: Lightweight Prefill-Decode disaggregated LLM serving toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xpyd-proxy>=1.2.0",
    "xpyd-sim>=0.3.0",
]
